# bobgui

./: .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  GEMINI.md  GPT.md  HANDOFF.md  IDEAS.md  MEMORY.md  NEWS  README.win32  ROADMAP.md  SUBMODULE_INVENTORY.md  TODO.md  UPP_ANALYSIS.md  VISION.md  bobgui.doap  copilot-instructions.md  finish_step.py  fix_meson.py  meson.build  plan_step_complete.py  test_media_cpp.cpp
.gitlab-ci/: test-docker.sh  test-msys2-autotools.sh  test-msys2.sh
bobgui/: bobgui.h  bobguiaboutdialog.c  bobguiaboutdialog.h  bobguiaccelgroup.c  bobguiaccelgroup.h  bobguiaccelgroupprivate.h  bobguiadjustment.c  bobguiadjustment.h  bobguiadjustmentprivate.h  bobguialertdialog.c  bobguialertdialog.h  bobguiapplication-quartz-menu.c  bobguiapplication.h  bobguiaspectframe.c  bobguiaspectframe.h  bobguibookmarksmanager.c  bobguibookmarksmanagerprivate.h  bobguiborder.c  bobguiborder.h  bobguibox.c  bobguibox.h  bobguibuildable.h  bobguibuilder.c  bobguibuilder.h  bobguibutton.c  bobguibutton.h  bobguibuttonprivate.h  bobguicalendar.c  bobguicalendar.h  bobguicheckbutton.c  bobguicheckbutton.h  bobguicolorchooserdialog.c  bobguicolorchooserwidget.c  bobguicolorchooserwidgetprivate.h  bobguicolordialog.c  bobguicolordialog.h  bobguicolordialogbutton.c  bobguicolordialogbutton.h  bobguicoloreditor.c  bobguicoloreditorprivate.h  (+405 more)
demos/: meson.build
docs/: ACTION_METADATA_EVOLUTION.md  ACTION_REGISTRY_LAYER.md  ACTION_SECTION_MODEL.md  APP_FRAMEWORK_ERGONOMICS_PROGRESS.md  COMMAND_PALETTE_LAYER.md  CPP_APP_FRAMEWORK_LAYER.md  CPP_DASHBOARD_SHELL_PRESET_2026-04-05.md  CPP_EXAMPLE_PRESETS_2026-04-05.md  CPP_TOOLBAR_BUILDERS_2026-04-05.md  CPP_VISUAL_POLICY_LAYER_2026-04-05.md  CPP_WORKSPACE_AND_DOCUMENT_SHELL_2026-04-05.md  CPP_WORKSPACE_SURFACE_PRESETS_2026-04-05.md  GRAND_UNIFIED_ANALYSIS.md  RENAME_AUDIT_2026-04-05.md  TOOLBAR_AND_ACTION_SURFACES.md  ULTRASONIC_ANALYSIS.md  WORKBENCH_DEMO_APP.md  WORKBENCH_LAYER.md
docs/reference/: meson.build
docs/reference/bobgui/: overview.md
docs/reference/bobgui/images/: meson.build
docs/reference/gdk/: cairo.md  meson.build
docs/reference/gtk/: gtk-docs.sgml  gtk3-sections.txt  gtk3.types.in  meson.build
examples/: builder.c  meson.build
examples/application1/: meson.build
examples/application2/: meson.build
examples/application3/: meson.build
examples/application4/: meson.build
examples/application5/: meson.build
examples/application6/: meson.build
examples/application7/: meson.build
examples/application8/: meson.build
examples/application9/: meson.build
examples/bp/: bloatpad.c  meson.build
examples/dashboard-demo/: main.cpp
examples/document-demo/: main.cpp
examples/workbench-demo/: main.c  main.cpp
gdk/: gdk.c  gdkapplaunchcontext.c  gdkcolorstate.c  gdkconfig.h.meson  gdkcontentformats.c  gdkcursor.c  gdkcursor.h  gdkdevice.c  gdkdisplay.c  gdkdisplaymanager.c  gdkdmabuf.c  gdkdmabufegl.c  gdkdmabufeglprivate.h  gdkevents.c  gdkevents.h  gdkframeclock.c  gdkframeclockidle.c  gdkgl.c  gdkglcontext.c  gdkglcontext.h  gdkkeys.c  gdkkeys.h  gdkmemoryformat.c  gdkmonitor.c  gdkmonitorprivate.h  gdkpango.c  gdkpipeiostreamprivate.h  gdkprofiler.c  gdkprofilerprivate.h  gdkrgba.c  gdkseat.c  gdkseatdefault.c  gdkseatprivate.h  gdktexture.c  gdktypes.h  gen-gdk-gresources-xml.py  keynamesprivate.h  meson.build
gdk/wayland/: gdkapplaunchcontext-wayland.c  gdkcursor-wayland.c  gdkdevice-wayland.c  gdkdisplay-wayland.c  gdkdisplay-wayland.h  gdkeventsource.c  gdkglcontext-wayland.c  gdkkeymap-wayland.c  gdkmonitor-wayland.c  gdkmonitor-wayland.h  gdkseat-wayland.c  gdksubsurface-wayland.c  gdkwaylanddisplay.h  meson.build
gdk/win32/: gdkdevice-win32.c  gdkdevice-winpointer.c  gdkdevice-winpointer.h  gdkdevice-wintab.c  gdkdevice-wintab.h  gdkdevicemanager-win32.c  gdkdevicemanager-win32.h  gdkdisplay-win32.c  gdkdisplay-win32.h  gdkevents-win32.c  gdkglcontext-win32-wgl.c  gdkglcontext-win32.c  gdkglcontext-win32.h  gdkkeys-win32-impl.c  gdkkeys-win32.c  gdkmain-win32.c  gdkmonitor-win32.c  gdkmonitor-win32.h  gdkprivate-win32.h  gdksurface-win32.c  gdkwin32dnd-private.h  gdkwin32misc.h  meson.build  winpointer.h
go/: go.mod  main.go
gsk/: gskcopynode.h  gskglshader.c  gskprivate.c  gskrendernodeparser.c
gtk/: gtk.h  gtkapplication-dbus.c  gtkapplication-wayland.c  gtkapplication.c  gtkatcontext.c  gtkbuilder.c  gtkcellarea.c  gtkcellrenderer.c  gtkcheckbutton.c  gtkcombobox.c  gtkcomboboxtext.c  gtkcssprovider.c  gtkcssprovider.h  gtkdropdown.c  gtkentry.c  gtkfilechooserdefault.c  gtkfilechooserprivate.h  gtkfilechooserwidget.c  gtkfontchooserdialog.c  gtkfontdialogbutton.c  gtkicontheme.c  gtkiconview.c  gtkimage.c  gtklabel.c  gtklinkbutton.c  gtknotebook.c  gtkpathbar.c  gtkpicture.c  gtkpopover.c  gtkrecentfilter.c  gtkrevealer.c  gtkscalebutton.c  gtkscrollbar.c  gtkscrolledwindow.c  gtksettings.c  gtkspinbutton.c  gtkstack.c  gtkswitch.c  gtktogglebutton.c  gtktreeprivate.h  (+6 more)
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  be.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gd.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  (+26 more)
tests/: Makefile.am  animated-resizing.c  bobguigears.c  meson.build  testbaseline.c  testcalendar.c  testcombo.c  testdropdown.c  testentrycompletion.c  testentryicons.c  testframe.c  testgmenu.c  testheightforwidth.c  testinfobar.c  testlist3.c  testlist4.c  testmenubutton.c  testmodelbutton.c  testpopover.c  testrevealer.c  testspinbutton.c  teststackedheaders.ui  video-timer.c
testsuite/a11y/: meson.build
testsuite/css/: meson.build
testsuite/css/nodes/: buttons.nodes  meson.build
testsuite/css/parser/: border-crash-3.24.errors  meson.build  test-css-parser.c
testsuite/css/style/: meson.build  test-css-style.c
testsuite/tools/: meson.build
testsuite/tools/simplify/: test2.expected  test3.expected  test4.expected  test8.expected
testsuite/tools/simplify-3to4/: bobguifilechooserdialog.ui
(+370 files in other folders)
