bobgui_tests = [
  # testname, optional extra sources
  ['movingtext'],
  ['bigfont'],
  ['svg-view'],
  ['imagednd'],
  ['testcursor'],
  ['callbackcursor'],
  ['devicepixels'],
  ['testsections'],
  ['testfilelauncher'],
  ['input'],
  ['testpopup'],
  ['testupload'],
  ['testtransform'],
  ['testdropdown'],
  ['rendernode'],
  ['rendernode-create-tests'],
  ['overlayscroll'],
  ['syncscroll'],
  ['animated-resizing', ['frame-stats.c', 'variable.c']],
  ['animated-revealing', ['frame-stats.c', 'variable.c']],
  ['motion-compression'],
  ['scrolling-performance', ['frame-stats.c', 'variable.c']],
  ['simple', [],[ libbobgui_dep ]],
  ['video-timer', ['variable.c']],
  ['testaccel'],
  ['testadjustsize'],
  ['testappchooser'],
  ['testappchooserbutton'],
  ['testassistant'],
  ['testbaseline'],
  ['testbaseline2'],
  ['testcalendar'],
  ['testcombo'],
  ['testcolumnview'],
  ['testcombochange'],
  ['testcellrenderertext'],
  ['testdialog'],
  ['testdnd2'],
  ['testdndresize'],
  ['testellipsise'],
  ['testentrycompletion'],
  ['testentryicons'],
  ['testfilechooser'],
  ['testflowbox'],
  ['testfontoptions'],
  ['testframe'],
  ['testfullscreen'],
  ['testglarea'],
  ['testglblending', ['bobguigears.c']],
  ['testgrid'],
  ['testbobgui'],
  ['testheaderbar'],
  ['testheightforwidth'],
  ['testhover'],
  ['testiconview'],
  ['testiconview-keynav'],
  ['testinfobar'],
  ['testkineticscrolling'],
  ['testlist'],
  ['testlist2'],
  ['testlist3'],
  ['testlist4'],
  ['testlistdnd'],
  ['testlistview'],
  ['testlistview-animating'],
  ['testlevelbar'],
  ['testlockbutton'],
  ['testmenubutton'],
  ['testmountoperation'],
  ['testnativecontrols'],
  ['testnotebookdnd'],
  ['testnouiprint'],
  ['testoverlay'],
  ['testoverlaystyleclass'],
  ['testprint', ['testprintfileoperation.c']],
  ['testscale'],
  ['testselectionmode'],
  ['testsounds'],
  ['testspinbutton'],
  ['testtreechanging'],
  ['testtreednd'],
  ['testtreeedit'],
  ['testtreemodel'],
  ['testtreeview'],
  ['testtreefocus'],
  ['testtreeflow'],
  ['testtreecolumns'],
  ['testtreecolumnsizing'],
  ['testtreesort'],
  ['testverticalcells'],
  ['treestoretest'],
  ['testgrouping'],
  ['testtooltips'],
  ['testexpand'],
  ['testvolumebutton'],
  ['testscrolledwindow'],
  ['testscrolledge'],
  ['testscrolltofocus'],
  ['testcellarea'],
  ['testswitch'],
  ['testtreepos'],
  ['testsensitive'],
  ['testtextscroll'],
  ['testtextview'],
  ['testtextview2'],
  ['testgmenu'],
  ['testlogout'],
  ['teststack'],
  ['testrevealer'],
  ['testrevealer2'],
  ['testsuspended'],
  ['testwindowsize'],
  ['testpopover'],
  ['listmodel'],
  ['testgaction'],
  ['testwidgetfocus'],
  ['testwidgettransforms'],
  ['testcenterbox'],
  ['testgridbaseline'],
  ['showrendernode'],
  ['testborderdrawing'],
  ['testoutsetshadowdrawing'],
  ['testblur'],
  ['testtexture'],
  ['testwindowdrag'],
  ['testinhibitshortcuts'],
  ['testzoom'],
  ['testdatatable', ['frame-stats.c', 'variable.c']],
  ['testfiledialog'],
]

if os_unix
  bobgui_tests += [
    ['testfontchooserdialog'],
    ['parallel', [], [ libbobgui_static_dep, libm ] ],
gtk_tests = [
  # testname, optional extra sources
  ['animated-resizing', ['frame-stats.c', 'variable.c']],
  ['animated-revealing', ['frame-stats.c', 'variable.c']],
  ['scrolling-performance', ['frame-stats.c', 'variable.c']],
  ['blur-performance', ['../gtk/gtkcairoblur.c']],
  ['flicker'],
  ['gdkgears', ['gtkgears.c']],
  ['listmodel'],
  ['motion-compression'],
  ['styleexamples'],
  ['overlayscroll'],
  ['print-editor'],
  ['simple'],
  ['subsurface'],
  ['syncscroll'],
  ['testaccel'],
  ['testactionbar'],
  ['testactions'],
  ['testadjustsize'],
  ['testanimation'],
  ['testappchooserbutton'],
  ['testappchooser'],
  ['testassistant'],
  ['testbaseline'],
  ['testbbox'],
  ['testbox'],
  ['testboxcss'],
  ['testbuttons'],
  ['testcairo'],
  ['testcalendar'],
  ['testcellarea'],
  ['testcellrenderertext'],
  ['testclipboard'],
  ['testcolorchooser'],
  ['testcombo'],
  ['testcombochange'],
  ['testdialog'],
  ['testdnd'],
  ['testellipsise'],
  ['testemblems'],
  ['testentrycompletion'],
  ['testentryicons'],
  ['testexpand'],
  ['testexpander'],
  ['testfilechooserbutton'],
  ['testfilechooser'],
  ['testflowbox'],
  ['testfontchooser'],
  ['testfontoptions'],
  ['testfontselection'],
  ['testfontselectiondialog'],
  ['testframe'],
  ['testfullscreen'],
  ['testgeometry'],
  ['testgiconpixbuf'],
  ['testglblending', ['gtkgears.c']],
  ['testgmenu'],
  ['testgrid'],
  ['testgrouping'],
  ['testgtk'],
  ['testheaderbar'],
  ['testheightforwidth'],
  ['testicontheme'],
  ['testiconview'],
  ['testimage'],
  ['testinput'],
  ['testkineticscrolling'],
  ['testlevelbar'],
  ['testlist'],
  ['testlockbutton'],
  ['testlogout'],
  ['testmenubutton'],
  ['testmerge'],
  ['testmountoperation'],
  ['testmultidisplay'],
  ['testnoscreen'],
  ['testnotebookdnd'],
  ['testnouiprint'],
  ['testnumerableicon'],
  ['testoffscreen', ['gtkoffscreenbox.c']],
  ['testoffscreenwindow'],
  ['testorientable'],
  ['testoverlay'],
  ['testoverlaystyleclass'],
  ['testpopover'],
  ['testpopupat'],
  ['testpopup'],
  ['testprint', ['testprintfileoperation.c']],
  ['testrecentchooser'],
  ['testrecentchoosermenu'],
  ['testrevealer'],
  ['testrichtext'],
  ['testscale'],
  ['testscrolledge'],
  ['testscrolledwindow'],
  ['testselection'],
  ['testselectionmode'],
  ['testsensitive'],
  ['testspinbutton'],
  ['testsplitheaders'],
  ['teststack'],
  ['teststatusicon'],
  ['teststockbuttonmenu'],
  ['testswitch'],
  ['testtextview'],
  ['testtitlebar'],
  ['testtoolbar'],
  ['testtooltips'],
  ['testtoplevelembed'],
  ['testtreechanging'],
  ['testtreecolumns'],
  ['testtreecolumnsizing'],
  ['testtreednd'],
  ['testtreeedit'],
  ['testtreeflow'],
  ['testtreefocus'],
  ['testtreemenu'],
  ['testtreemodel'],
  ['testtreepos'],
  ['testtreesort'],
  ['testtreeview'],
  ['testverticalcells'],
  ['testvolumebutton'],
  ['testwindows'],
  ['testwindowsize'],
  ['testxinerama'],
  ['treestoretest'],
  ['video-timer', ['variable.c']],
]

# Conditionally compiled tests
if x11_enabled
  gtk_tests += [
    ['testsocket', ['testsocket_common.c']],
    ['testsocket_child', ['testsocket_common.c']],
  ]
endif

if os_linux
  rsvg_dep = dependency('librsvg-2.0', required: false)

  if rsvg_dep.found()
    bobgui_tests += [
      ['svg-compare', ['svgpaintable.c' ],[ libbobgui_dep, rsvg_dep ]],
    ]
  endif
endif

if x11_enabled
  bobgui_tests += [['testerrors']]
  gtk_tests += [['testfontchooserdialog']]
endif

# Pass the source dir here so programs can change into the source directory
# and find .ui files and .png files and such that they load at runtime
test_args = ['-DBOBGUI_SRCDIR="@0@"'.format(meson.current_source_dir())]

foreach t: bobgui_tests
  test_name = t.get(0)
  test_srcs = ['@0@.c'.format(test_name), t.get(1, [])]
  test_libs = t.get(2,[])
  if test_libs == []
    test_libs = [ libbobgui_dep, libm ]
  endif
  executable(test_name,
    sources: test_srcs,
    include_directories: [confinc, gdkinc],
    c_args: test_args + common_cflags,
    dependencies: test_libs,
  )
endforeach
test_args = ['-DGTK_SRCDIR="@0@"'.format(meson.current_source_dir())]

foreach t: gtk_tests
  test_name = t.get(0)
  test_srcs = ['@0@.c'.format(test_name), t.get(1, [])]
  executable(test_name, test_srcs,
             c_args: test_args,
             dependencies: [libgtk_dep, libm])
endforeach

subdir('visuals')
